--- a/set(100-107).md
+++ b/set(100-107).md
@@ -1,9 +1,21 @@
 # Вопросы 100-107
 
+**Объявление** - выделение памяти под объект.  
+За объявление отвечают аллокаторы(не совсем точная инфа, ведь есть и другие штучки, отвечающие за выделение памяти)
 
+
+**Присваивание** - задание значений для полей объекта.  
+За присваивание отвечает `operator=`
+
+**Инициализация** - объявление + присваивание одновременно.  
+За инициализацию отвечают конструкторы.
+
+___
 ## Вопрос 100
 
 **Инициализация объектов классов, перечислите все её способы и проиллюстрируйте примерами.**
+
+> [Инициализация в C++]()
 
 **Ответ:** для начала отметим, что тема инициализации в c++ очень глубока и сложна, каждый стандарт содержал дополнения, но тем не менее все еще ведется разработка. Если хотите супер подробно, и  если вам не жалко для этого пары часов, то читайте эту [интересную статью](https://habr.com/ru/company/jugru/blog/469465/). Начнем инциализаций, которые перекочевали в C++ из C.
 
@@ -163,37 +175,209 @@ ___
     
 **Ответ:** 
 
-мне кажется, что ждут ответ типа: "если мы говорим про пользовательские классы, то - написать соответсвующий конструктор". Но вы посмотрите на первые 4 пункта из вопроса 100, там нигде явный конструктор не нужен был, хотя возможно компилятор и создавал его сам. **Поэтому, кто знает ответ на этот вопрос, скажите мне, плиз!!**
+мне кажется, что ждут ответ типа: "если мы говорим про пользовательские классы, то - написать соответсвующий конструктор". Но вы посмотрите на первые 4 пункта из вопроса 100, там нигде явный конструктор не нужен был, компилятор сам создавал свой конструктор для этого. 
+> На самом деле, если мы не написали **никакой** конструктор для `struct`, `class`, `union`, то компилятор всегда сможет сделать это сам, при этом запихнет он его в публичнй раздел нашей структуры. См. [здесь](https://en.cppreference.com/w/cpp/language/default_constructor#:~:text=If%20no%20user,of%20its%20class.)
 
+Поэтому мы бы ответили, что "ничего, ибо компилятор позволит нам это сделать".
 ___
 
 ## Вопрос 102
 
-**Что нужно сделать, чтобы имелась возможность инициализировать значение объекта в месте его определения?**
+**Можно ли проинициализировать значение объекта в месте его определения без вызова конструктора?**
 
-**Ответ:** да
-```c++
-class Human {
-public:
-    const int get_age() const noexcept { return _age; }
-    const int get_chromosomes() const noexcept { return _chromosomes; }
+мы не можем ответить на этот вопрос. 
 
-    int _age;
-    int _chromosomes;
-};
-
-int main() {
-    static Human chel { 8, 47 };   // <=> Human chel = {20, 48};
-    
-    std::cout << chel.get_age() << '\n'; // Вывод: 20
-    std::cout << chel.get_chromosomes() << '\n'; // Вывод: 48
-}
-```
+В в C были структуры, но в C не было конструкторов, поэтому инициализация структур там была без конструкторов. В C++ появились конструкторы, и если мы не объявляли никакого конструктора в нашей структуре (struct, union, class), то за нас это сделает компилятор. Значит ли это, что в C++ теперь нельзя инициализировать структуру совсем без конструктора( и без того, что создаст компилятор )??
 
 ___
 
 ## Вопрос 103
 
-**Что нужно сделать, чтобы имелась возможность инициализировать значение объекта в месте его определения?**
+**Инициализирующий конструктор: назначение, способ оформления, способы применения, отличие от перегрузки операции присваивания.**
     
-**Ответ:** да
+**Ответ:**  
+- **Инициализирующий конструктор** - любой ранее перечисленный конструктор. 
+- Способ оформления. Конструктор - функция-метод и её название обязательно должно совпадать с названием класса. Параметры конструктора могут отсутствовать, и тогда такой конструктор называется конструктором по умолчанию (= инициализация по умолчанию) (_default constructor_). А может содержать какие-то параметры, которые будут как-то учитываться при создани экземпляров структуры.
+- Способ применения. Он вызывается автоматически при создании экземпляра структуры. Но конструктор объекта можно вызвать почти явно. С помощью оператора `new`, который сначала выделит память, а потом вызовет соответствующий параметрам конструктор.
+- КОНСТРУКТОР != ОПЕРАТОР ПРИСВАИВАНИЯ. Пример
+    ```c++
+    class Human {
+    public:
+
+        explicit Human (int age = 20, int chromosomes = 48) {
+            _age = age;
+            _chromosomes = chromosomes;
+        }
+
+        explicit Human (const Human& other) {
+            _age = other._age;
+            _chromosomes = other._chromosomes;
+        }
+
+        Human& operator= (const Human& other) {
+            _age = other._age;
+            _chromosomes = other._chromosomes;
+        }
+
+        const int get_age() const noexcept { return _age; }
+        const int get_chromosomes() const noexcept { return _chromosomes; }
+
+
+
+        int _age;
+        int _chromosomes;
+    };
+
+    int main() {
+        Human chel(8, 47);   // <=> Human chel = {20, 48};
+
+        Human chuvak = chel; // строка 32
+
+        std::cout << chel.get_age() << '\n'; // Вывод: 20
+        std::cout << chel.get_chromosomes() << '\n'; // Вывод: 48
+    }
+    ```
+
+    В строке 32 будет вызван конструктор копий, даже если он не опрделен и НИКОГДА оператор присваиавния. 
+    - Конструктор нужен, чтобы инициализировать поля структуры, т.е. раньше их не было, после появились
+    - Оператов присваивания нужен для того, чтобы присвоить уже существующим полям одного объекта значения другого объекта.
+
+___
+
+## Вопрос 104
+
+**Понятие ссылки: назначение, способы применения, побочные эффекты.**
+    
+**Ответ:** 
+
+> Достаточно традиционный взгляд — это считать ссылку «замаскированным» константным указателем. Но Страуструп и другие авторы, например Стефан Дьюхэрст [Dewhurst], считают такую точку зрения неверной и настаивают, что ссылка — это просто псевдоним переменой, на которую она ссылается.
+
+Указатель в свою очередь это некий объект, значением которого является адресс в памяти другого объекта. 
+
+> Синтаксис языка не позволяет различить целевой объект и саму  ссылку — все операции над ссылкой на самом деле являются операциями над объектом. Как следствие этого:  
+>   1. Ссылку нельзя переназначить на другой объект - связь между ссылкой и переменной «до гробовой доски»
+>   2. Нельзя сравнить адрес, содержащийся в ссылке, с адресом другого объекта или NULL
+
+> Из этих свойств в свою очередь следуют другие ограничения:
+> 
+>    3. Ссылка должна быть инициализирована при создании (поскольку инициализировать ее позже не возможно)
+>    4. Ссылка не может содержать нулевой адрес (поскольку проверить и обработать это невозможно)
+
+В C++ есть потребность в _чистых указателях_ - указатели, для которых система типов гарантирует, что они инициализированны и не они не `nullptr` или `NULL`, свойства 3, 4 как раз организуют чистые указатели, эти же свойства есть главное достоинство ссылок.
+
+1. **Назначение**
+        
+    Ссылки были созданы для того, чтобы где-то упросить работу с указателями и для того, чтобы служить `l-value` значениями при возврате их из функций. Указатели с последним не справляются, вот пример:
+    ```c++
+    int* foo(int* x) {
+        return x;
+    }
+
+    int main() {
+        int x = 42;
+        int* ptr = &x;
+
+        foo(ptr) = 7; // строка 12
+    }
+    ``` 
+
+    Значение функции `foo(int*)` не является левосторонним значением, в строке 12 ошибка. В качестве еще одного примера можно привести `operator[]`, если бы он был реализован через указатели, у нас никогда бы не получилось следующее:
+    ```c++
+    int main() {
+        std::vector<int> vector(42, 0);
+        int array [42];
+        
+        vector[2] = 42;  // это не получилось бы 
+        array[2] = 42;   // это не получилось бы
+
+        std::cout << array[2] << '\n' << vector[2]; 
+
+        
+        return 0;
+    }
+    ```
+    Вывод:
+        
+        42
+        42
+
+    На самом деле ради последнего и создали новый **тип**, который назвали ссылочным - ссылками. 
+
+2. **Способы применения**
+    
+    инициализируете ссылку -> используете ссылку
+
+3. **Побочные эффекты**
+
+    все, что происходит с ссылкой происходит и с объектом.
+___
+
+## Вопрос 105
+
+**Всегда ли передача по ссылке лучше передачи по значению?**
+    
+**Ответ:** 
+
+Короткий ответ - да, в общем случае это так. Почему? Потому, что здесь производительность считается в количестве запусков конструктора копирование, т.к. он довольно требовательный. Из всех трех вариантов (передача по ссылке на константу, передача по значению, перемещение(_еще один метод передачи значения в функцию_)) самым выгодным в общем случае является метод передачи по ссылке на константу, который вызывает конструктор копирования не сильно больше, чем при перемещении, но который не так сильно раздувает код, по сравнению с перемещением(отдельные методы нужно будет написать), что улучшает читабельность, ускоряет отладу, упрощает поддержание кода, а это **ОЧЕНЬ-ОЧЕНЬ** важно.
+
+Длинный(очень) ответ - не всегда, есть частные случаи, когда это не так, а передача по значению позволит ускорить программу. Читай эту [статью](http://scrutator.me/post/2018/07/30/value_vs_reference.aspx).
+
+___
+
+## Вопрос 106
+
+**Всегда ли передача по ссылке лучше передачи по указателю?**
+    
+**Ответ:** 
+
+Честно говоря, это практически однинаковые вещи, поскольку ссылка это все же разыменованный указатель(сейчас мы склоняемя к этой точке зрения), то реализция передачи значений по ссылке на константу основана на передаче по указателю.
+
+Минусы:  
+- усложнение синтаксиса
+- дополнительные проверки `!= nullptr`, иначе прога обвалиться
+- адрессная арифметика **ОЧЕНЬ-ОЧЕНЬ** не безопастна 
+- разыменование медленнее, чем прямой доступ по значению
+  
+Плюсы:  
+- те же, что и у передачи по ссылке на константу
+
+
+Когда можно использовать передачу по указателю: **только** при работе с обычными массивами.
+
+**Правило хорошего тона:** использовать передачу по ссылке, вместо передачи по адресу, когда это возможно.
+
+___
+
+## Вопрос 107
+
+**Всегда ли можно обойтись без ссылки?**
+    
+**Ответ:** 
+
+Начнем с передачи аргументов по константой ссылке (_т.е. оптимизированная передача по значению_).
+
+Чтобы принять правильно решение относительно этой оптимизации надо учесть:
+- Стоимость выделения памяти под копию объекта
+- Стоимость конструктора копирования и деструктора
+- Стоимость разыменования ссылки внутри функции
+- Соглашение о вызове для конкретной функции — решение может быть разным при использовании регистров и стека
+- Возможный выигрыш от оптимизаций, которые компилятор может применить зная что никакие аргументы функции не являются псевдонимами.
+
+Поскольку каждый раз отвечать на эти вопросы очень трудоемко, то возложим это на компилятор, он будет принимать решения во время компиляции, вместо нас. Но такой подход тоже имеет свои недостатки, например, компилятор должен принять решение не учитывая факторы скрытые в реализации функции, а это может сыграть решающую роль.
+
+Теперь что делать с конструктором копирования? Когда мы будем передавать объекты в функцию в качестве параметров, то будет вызываться конструктор копирования. Но если передавать к конструктор копирования объекты как пераметры, то будет вызываться тот же конструктор копировая => бесконечная рекурсия, это исправляется добовлением исключений в конструктор копирования, так чтобы в конструктор копирования объектры передавались по указателю.
+
+Теперь что делать с возвратом `l-value` значений? Что-то с этим сделать можно.
+```c++
+a[i] = b;
+*a.operator[](i) = b;
+(++i) = x;
+*i.operator++() = x;
+(x = y) = z;
+*x.operator=(y) = z;
+*p = d;
+*p.operator->() = d;
+```
+Но во всех остальных случаях это может противоречить здравому смыслу.
+
+**Итог:** да, в C++ можно обойтись без ссылок, но цена потери довольно высока
