--- a/set(67-73).md
+++ b/set(67-73).md
@@ -3,6 +3,176 @@
 
 ## Вопрос 67
 
-**Генерация и обработка исключительных ситуаций: является ли не-обходимой, чем обусловлено её введение, как осуществляется (правила перехватывания).**
+**Генерация и обработка исключительных ситуаций: является ли необходимой, чем обусловлено её введение, как осуществляется (правила перехватывания).**
 
 **Ответ:** 
+
+**Почему необходимо создавать систему поиска и обработки исключений?**
+
+Ошибки программы делятся на две категории: 
+- **логические ошибки**, вызванные ошибками программирования, например, ошибкой «index out of range» 
+- Run-time ошибки, которые выходят за рамки управления программистом, например, пользователь пытается посчитать определитель у неквадратной матрицы.
+
+Если мы не напишем систему, которая будет работать с этими ошибками, то при каждой такой ошибке программа будет экстренно останавливать свою работу, а пользователь или программист, возможно, даже не поймут причины этих выходов. 
+
+В современном C++ предпочтительным способом сообщить пальзователю о логических ошибках и об ошибках во время выполнения и обработать их - ввести исключения. Особенно это важно, когда стек может содержать что-то(другие функции) между вызовом функцией, которая ошибку находит и функцией, которая эту ошибку обрабатывает. Исключения же в момент обнаружения ошибки двигают функцию, которая её обрабатывает вверх по стеку.
+
+**Является ли необходимой?** - да, даже если вы уверены в своих способностях и в наличии разума у пользователя, мы все равно хотим создат продукт, который невозможно "сломать".
+
+**Правила перехвата ошибок**
+
+1. Искючения становятся доступны для поимки, если они были выброшены: оператор `throw`. Искючения ловятся и обрабатываются в блоке `try` оператором `catch`. 
+2. Исключения будет перехвачено первым оператором `catch`, тип которого совпадет с типом исключения. Если есть система наследования исключений, то исключение базового класса ловит все искючения производных классов. 
+3. Если для некоторого класса нет обрабочика, и при этом такое исключение было выбрашено, программа завершит свое выполнение.
+
+**Рекомендации**
+ 
+1. Все классы исключений рекомендуется прямо или косвено(через базовый класс) наследовать от `std::exception`
+2. Генерируйте исключения по значению, перехватывайте — по ссылке(обычно константная)
+3. При ООП используйте исключения вместо кодов возврата. Есть мнение, что последовательно выбрасывание большого (10.000) количества исключений сильно замендляет код. Кто-то за, кто-то против, [например](https://habr.com/ru/post/130611/), оставляю ответ на это вам. 
+
+___
+
+## Вопрос 68
+
+**Что будет, если для некоторого класса исключительных ситуаций нет обработчика?**
+
+**Ответ:** 
+
+Если для некоторого класса нет обрабочика, и при этом такое исключение было выбрашено, программа завершит свое выполнение.
+
+Поэтому, нам (Рустему) кажется, что последние операторы `catch` должны ловить все исключения и обрабатывать их общим способом.
+
+```c++
+try {
+    ...
+}
+catch (const networkIOException& e) {
+    // ...
+   cerr << e.what();
+}
+catch (const myDataFormatException& e) {
+   // ...
+   cerr << e.what();
+}
+catch (const std::exception e) {
+    // ...
+}
+catch (...) { // ловит любое исключение 
+    // ...
+} 
+```
+
+___
+
+## Вопрос 69
+
+**Что будет, если один класс исключительных ситуаций порождён от другого?**
+
+**Ответ:**
+
+Ничего не будет
+
+___
+
+## Вопрос 70
+
+**Бывают ли такие функции, в которых принципиально нельзя генерировать исключительные ситуации?**
+
+**Ответ:**
+
+Не бывает, но выбрасывать исключения стоит очень аккуратно. Когда вы выбрасывает исключение в функции, права выполнения переходят к обработчику исключений. Например, вы выбросили исключение `OutOfRange`  в деструкторе, обработчик обработал её, но больше в десруктор программа не вернется, поэтому экземляр может не быть удален или если имеем дело с конструктором, то создание экземляра не произойдет. Кроме того, не рекомендуется выбрасывать искючение конструкторе перемещения, т.к. теряется производительность этого конструктора(а он нам только для скорости и нужен). Пример: в сроке 40 было брошено исключение, строка 42 стала бесполезной.
+```c++
+class Exception : std::exception {
+private:
+    const char *_message = "otvali ot menya, che pristal to";
+public:
+    Exception() = default;
+    ~Exception() = default;
+
+    const char* what() const noexcept override { return _message; }
+}; 
+
+
+class Complex {
+public:
+    
+    Complex() = default;
+    Complex(double Re, double Im) {
+        _Re = Re;
+        _Im = Im;
+    }
+    ~Complex() = default;
+
+    explicit Complex (double Re) { // строка 16
+        _Re = Re; 
+        _Im = 0;
+    }
+
+    friend void _print(const Complex &complex);
+
+private:
+    double _Re;
+    double _Im;
+};
+
+void _print(const Complex &complex) {
+        std::cout << '\n' << "Re = " << complex._Re;
+        
+        throw Exception(); // строка 40
+        
+        std::cout << '\n' << "Im = " << complex._Im; // строка 42
+}
+
+int main() {
+    try {
+        Complex z(23.1, 0.42); _print(z); // строка 47
+    }
+    catch (const Exception &e) {
+        std::cout << '\n' << e.what() << '\n';
+    }
+
+    return 0;
+}
+``` 
+Вывод:  
+    
+    Re = 23.1
+    otvali ot menya, che pristal to
+
+___
+
+## Вопрос 70
+
+**Классы памяти в C++: автоматический, динамический, временный, статический, внешний, регистровый: различия в поведении и использовании.**
+
+**Ответ:** рекомендую почитать [это](https://teccxx.neocities.org/mx1/memory.html) и [это](https://habr.com/ru/post/527044/)
+
+
+1. **Автоматическая**. Автоматические переменные создаются при входе в функцию и уничтожаются при выходе из неё. Они видны только внутри функции или блока, в которых определены. НЕ ПУТАТЬ С `auto variable = 9;` - это не автоматическая память.
+
+2. **Динамическая.** Выделение памяти из ОС по требованию приложения. Используется, когда мы точно не знаем сколько памяти нам потребуется для объекта. Для создания и очищиния используются операторы `new`, `delete` ; `malloc`, `free`
+
+3. `extern` — **глобальная** (внешняя) переменная. Внешние переменные доступны везде, где описаны, а не только там, где определены. Использование ключевого слова `extern` позволяет функции использовать внешнюю переменную, даже если она определяется позже в этом или другом файле. Для таких переменных связывание с адресом происходит на этапе компоновки(линкинг).
+
+4. `register` — **регистровая** переменная (локальная). Это слово является всего лишь «рекомендацией» компилятору помещать часто используемую переменную в регистры процессора для ускорения программы. Т.е. такие переменные отличаются от автоматических только местом хранения.
+
+5. Временная память ????
+
+6. `static` — **статическая** переменная (локальная). Пожалуйста, прочитайте эту [статью](https://habr.com/ru/post/527044/). Она очень хорошо написана, поэтмоу нет смысла делать из неё выжимку.
+
+___
+
+## Вопрос 72
+
+**Когда вызываются конструкторы статических атрибутов класса?**
+
+**Ответ:** см. Вопрос 71 п.6
+
+___
+
+## Вопрос 73
+
+**Что дальше будет происходить с временным объектом после завершения его создавшей функции?**
+
+**Ответ:** Что такое временная память?
