--- a/set(67-73).md
+++ b/set(67-73).md
@@ -157,7 +157,7 @@ ___
 
 4. `register` — **регистровая** переменная (локальная). Это слово является всего лишь «рекомендацией» компилятору помещать часто используемую переменную в регистры процессора для ускорения программы. Т.е. такие переменные отличаются от автоматических только местом хранения.
 
-5. Временная память ????
+5. **Временная** (промежуточная) память — память для хранения промежуточных результатов обработки. (~ автоматической)
 
 6. `static` — **статическая** переменная (локальная). Пожалуйста, прочитайте эту [статью](https://habr.com/ru/post/527044/). Она очень хорошо написана, поэтмоу нет смысла делать из неё выжимку.
 
@@ -175,4 +175,4 @@ ___
 
 **Что дальше будет происходить с временным объектом после завершения его создавшей функции?**
 
-**Ответ:** Что такое временная память?
+**Ответ:** будет вызван деструктор этого объекта
