--- a/set(67-73).md
+++ b/set(67-73).md
@@ -161,6 +161,15 @@ ___
 
 6. `static` — **статическая** переменная (локальная). Пожалуйста, прочитайте эту [статью](https://habr.com/ru/post/527044/). Она очень хорошо написана, поэтмоу нет смысла делать из неё выжимку.
 
+
+| Ключевое слово |     Класс памяти    |    Где находится   |        Создание       | Удаление |
+|----------------|:-------------------:|:------------------:|:---------------------:|---------:|
+|                |    автоматическя    |        Stack       |        Run-time       | Run-time |
+|                |     динамическая    |        Heap        |        Run-time       | Run-time |
+| `extern`       | глобальная(внешняя) |    Общая память    | Compile-time(Linking) |     exit |
+| `register`     |     регистровая     | Кеш или регистр ЦП |        Run-time       | Run-time |
+|                |      временная      |     Оперативная память    |        Run-time       | Run-time |
+| `static`       |     статическая     |                    | Run-time\Compile-time |     exit |
 ___
 
 ## Вопрос 72
