--- a/set(100-107).md
+++ b/set(100-107).md
@@ -158,15 +158,15 @@ ___
     ```
     > Кстати скобки `()`, возможно с параметрами, при инциализации всегда вызывают конструктор.
 
-6. **Инициализация значением**
+6. [**Инициализация значением**](https://habr.com/ru/company/jugru/blog/469465/#:~:text=%D0%B8%D0%BC%D0%B5%D0%BD%D0%BD%D0%BE%20%D1%82%D0%B0%D0%BA%D0%BE%D0%B3%D0%BE%20%D0%BF%D0%BE%D0%B2%D0%B5%D0%B4%D0%B5%D0%BD%D0%B8%D1%8F.-,%D0%98%D0%BD%D0%B8%D1%86%D0%B8%D0%B0%D0%BB%D0%B8%D0%B7%D0%B0%D1%86%D0%B8%D1%8F%20%D0%B7%D0%BD%D0%B0%D1%87%D0%B5%D0%BD%D0%B8%D0%B5%D0%BC%20(C%2B%2B03),-%D0%9F%D0%B5%D1%80%D0%B5%D0%B9%D0%B4%D1%91%D0%BC%20%D0%BA%20%D1%81%D0%BB%D0%B5%D0%B4%D1%83%D1%8E%D1%89%D0%B5%D0%B9)
 
+   **Правило такое: если существует определённый пользователем конструктор по умолчанию, инициализация значением вызывает этот конструктор, в противном случае возвращается нуль.**
 
+7. [**Универсальная инициализация (C++11)**](https://habr.com/ru/company/jugru/blog/469465/#:~:text=%3D%20default.-,%D0%A3%D0%BD%D0%B8%D0%B2%D0%B5%D1%80%D1%81%D0%B0%D0%BB%D1%8C%D0%BD%D0%B0%D1%8F%20%D0%B8%D0%BD%D0%B8%D1%86%D0%B8%D0%B0%D0%BB%D0%B8%D0%B7%D0%B0%D1%86%D0%B8%D1%8F%20(C%2B%2B11),-%D0%92%20%D0%B2%D0%B5%D1%80%D1%81%D0%B8%D0%B8%20%D0%A1)
 
+8. [**Назначенная инициализация (С++20)**](https://habr.com/ru/company/jugru/blog/469465/#:~:text=%D0%BC%D0%BD%D0%BE%D0%B3%D0%BE%D0%B5%20%D0%BC%D0%BE%D0%B6%D0%BD%D0%BE%20%D1%83%D0%BB%D1%83%D1%87%D1%88%D0%B8%D1%82%D1%8C.-,%D0%9D%D0%B0%D0%B7%D0%BD%D0%B0%D1%87%D0%B5%D0%BD%D0%BD%D0%B0%D1%8F%20%D0%B8%D0%BD%D0%B8%D1%86%D0%B8%D0%B0%D0%BB%D0%B8%D0%B7%D0%B0%D1%86%D0%B8%D1%8F%20(%D0%A1%2B%2B20),-%D0%A2%D0%B5%D0%BF%D0%B5%D1%80%D1%8C%20%D0%B4%D0%B0%D0%B2%D0%B0%D0%B9%D1%82%D0%B5%20%D0%BF%D0%BE%D0%B3%D0%BE%D0%B2%D0%BE%D1%80%D0%B8%D0%BC)
 
-
-
-
-
+9. [**Прямая инициализация агрегатных типов (C++20)**](https://habr.com/ru/company/jugru/blog/469465/#:~:text=%D0%B4%D0%BB%D1%8F%20%D1%81%D0%BE%D0%B3%D0%BB%D0%B0%D1%81%D0%BE%D0%B2%D0%B0%D0%BD%D0%BD%D0%BE%D1%81%D1%82%D0%B8%20%D1%8F%D0%B7%D1%8B%D0%BA%D0%B0.-,%D0%9F%D1%80%D1%8F%D0%BC%D0%B0%D1%8F%20%D0%B8%D0%BD%D0%B8%D1%86%D0%B8%D0%B0%D0%BB%D0%B8%D0%B7%D0%B0%D1%86%D0%B8%D1%8F%20%D0%B0%D0%B3%D1%80%D0%B5%D0%B3%D0%B0%D1%82%D0%BD%D1%8B%D1%85%20%D1%82%D0%B8%D0%BF%D0%BE%D0%B2%20(C%2B%2B20),-%D0%9D%D0%B0%D0%BA%D0%BE%D0%BD%D0%B5%D1%86%2C%20%D0%B2%20%D0%A1) 
 ___
 
 ## Вопрос 101
