--- a/set(100-107).md
+++ b/set(100-107).md
@@ -78,7 +78,7 @@ ___
     int variable = 42;
     ```
 
-    В этом случае мы указываем переменную и через знак равенства — её значение. Отметим, что копирующая инициализация также используется, когда аргумент передаётся в функцию по значению, или когда происходит возврат объекта из функции по значению. Мы смотрим на знак равенсва и думаем: "Так это же присвоение значения...". Оказывается, что нет. **Копирующая инициализация — это не присвоение значения.**
+    В этом случае мы указываем переменную и через знак равенства — её значение. Отметим, что копирующая инициализация также используется, когда аргумент передаётся в функцию по значению, или когда происходит возврат объекта из функции по значению. Мы смотрим на знак равенсва и думаем: "Так это же присвоение значения...". Оказывается, что нет. **Копирующая инициализация — это не присвоение значения. Оператор присваяивания здесь нечего не делает!**
     
 3. **Агрегатная инициализация**
 
