--- a/set(100-107).md
+++ b/set(100-107).md
@@ -15,7 +15,7 @@ ___
 
 **Инициализация объектов классов, перечислите все её способы и проиллюстрируйте примерами.**
 
-> [Инициализация в C++]()
+> [Инициализация в C++](https://hsto.org/r/w1560/webt/bp/rd/ow/bprdow1rk6jtw5fzpm3bffzirps.gif)
 
 **Ответ:** для начала отметим, что тема инициализации в c++ очень глубока и сложна, каждый стандарт содержал дополнения, но тем не менее все еще ведется разработка. Если хотите супер подробно, и  если вам не жалко для этого пары часов, то читайте эту [интересную статью](https://habr.com/ru/company/jugru/blog/469465/). Начнем инциализаций, которые перекочевали в C++ из C.
 
