--- a/set(67-73).md
+++ b/set(67-73).md
@@ -164,7 +164,7 @@ ___
 
 | Ключевое слово |    Класс памяти     |   Где находится    |       Создание        | Удаление |
 |----------------|:-------------------:|:------------------:|:---------------------:|---------:|
-|                |    автоматическя    |       Stack        |       Run-time        | Run-time |
+|                |    автоматическя    |       Stack        |      Compile-time     | Run-time |
 |                |    динамическая     |        Heap        |       Run-time        | Run-time |
 | `extern`       | глобальная(внешняя) |    Общая память    | Compile-time(Linking) |     exit |
 | `register`     |     регистровая     | Кеш или регистр ЦП |       Run-time        | Run-time |
